RESOLVED FIXED223494
Metal-Angle on Simulator does not support D24S8 correctly
https://bugs.webkit.org/show_bug.cgi?id=223494
Summary Metal-Angle on Simulator does not support D24S8 correctly
Kyle Piddington
Reported 2021-03-18 18:44:49 PDT
Metal-Angle on Simulator does not support D24S8 correctly
Attachments
Patch (1.82 KB, patch)
2021-03-18 18:45 PDT, Kyle Piddington
no flags
Patch (2.73 KB, patch)
2021-03-18 21:22 PDT, Kyle Piddington
no flags
Patch (2.70 KB, patch)
2021-03-19 12:59 PDT, Kyle Piddington
dino: review+
Kyle Piddington
Comment 1 2021-03-18 18:45:23 PDT
EWS Watchlist
Comment 2 2021-03-18 18:46:34 PDT
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Kyle Piddington
Comment 3 2021-03-18 21:22:20 PDT
Kyle Piddington
Comment 4 2021-03-19 12:59:37 PDT
Radar WebKit Bug Importer
Comment 5 2021-03-19 17:43:34 PDT
Dean Jackson
Comment 6 2021-03-22 14:24:01 PDT
Note You need to log in before you can comment on or make changes to this bug.