Metal-Angle on Simulator does not support D24S8 correctly https://bugs.webkit.org/show_bug.cgi?id=223494

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-03-19
Reviewed by Dean Jackson.

Re-ran autogen script for format table to add the missing format
Corrected texture swizzle support. Swizzle is unsupported on simulator.

* src/libANGLE/renderer/metal/mtl_format_table_autogen.mm:
(rx::mtl::Format::init):

Canonical link: https://commits.webkit.org/235599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274798 268f45cc-cd09-0410-ab3c-d52691b4dbfc